force-app/main/default/objects/CDM_Log__c/CDM_Log__c.object-meta.xml
<CustomObject>
    <label>CDM Log</label>
    <nameField>
        <label>CDM Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CDM Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>