force-app/main/default/objects/CDM_Log__c/fields/CDM_Action__c.field-meta.xml
<CustomField>
    <fullName>CDM_Action__c</fullName>
    <label>CDM Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>