force-app/main/default/objects/CDM_Log__c/fields/Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>Entity_Number__c</fullName>
    <externalId>true</externalId>
    <label>Entity Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>