force-app/main/default/objects/CDM_Log__c/fields/Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Message__c</fullName>
    <label>Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>