force-app/main/default/objects/CDM_Log__c/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <label>Response Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>