force-app/main/default/objects/CDM_Log__c/fields/Victim_Entity_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Victim_Entity_Numbers__c</fullName>
    <label>Victim Entity Numbers</label>
    <type>TextArea</type>
</CustomField>